{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 25,
  "lineage": "dc3bdbb6-eab7-5bbf-79b5-7fdbcd3a396d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:internet-gateway/igw-0c1e6f2b6daa0f67b",
            "id": "igw-0c1e6f2b6daa0f67b",
            "owner_id": "228078008846",
            "tags": {
              "Name": "main_vpc_igw"
            },
            "tags_all": {
              "Name": "main_vpc_igw",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main_vpc_allow_all_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:network-acl/acl-0b728c18882a1cc15",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b728c18882a1cc15",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "228078008846",
            "subnet_ids": [
              "subnet-019f3ffa51de0f5d3",
              "subnet-01c8c8d219aa76e04",
              "subnet-04a597d21c2b3ca87",
              "subnet-08b7d84fd08a315b5",
              "subnet-0ba338e63ad7bc2ca",
              "subnet-0d11415907481a0de"
            ],
            "tags": {
              "Name": "Allow All"
            },
            "tags_all": {
              "Name": "Allow All",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main_private",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:route-table/rtb-0b2224b0671cb7147",
            "id": "rtb-0b2224b0671cb7147",
            "owner_id": "228078008846",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main_private_route_table"
            },
            "tags_all": {
              "Name": "main_private_route_table",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:route-table/rtb-0376788d8b5602628",
            "id": "rtb-0376788d8b5602628",
            "owner_id": "228078008846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1e6f2b6daa0f67b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_public_route_table"
            },
            "tags_all": {
              "Name": "main_public_route_table",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1c50df90332c77",
            "route_table_id": "rtb-0b2224b0671cb7147",
            "subnet_id": "subnet-04a597d21c2b3ca87"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.main_private",
            "aws_subnet.main_private",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a29bdd1d54e6f8a",
            "route_table_id": "rtb-0b2224b0671cb7147",
            "subnet_id": "subnet-0d11415907481a0de"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.main_private",
            "aws_subnet.main_private",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0739edef1d1d46b",
            "route_table_id": "rtb-0b2224b0671cb7147",
            "subnet_id": "subnet-019f3ffa51de0f5d3"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.main_private",
            "aws_subnet.main_private",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d57c0cc53046c54",
            "route_table_id": "rtb-0376788d8b5602628",
            "subnet_id": "subnet-01c8c8d219aa76e04"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main_public",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad78c58dca432de0",
            "route_table_id": "rtb-0376788d8b5602628",
            "subnet_id": "subnet-0ba338e63ad7bc2ca"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main_public",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b2cbe7d26d88f1a",
            "route_table_id": "rtb-0376788d8b5602628",
            "subnet_id": "subnet-08b7d84fd08a315b5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main_public",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_vpc_allow_all_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:security-group/sg-011339ed7e14d9324",
            "description": "Allow all traffic to and from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011339ed7e14d9324",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "main_vpc_allow_all_sg",
            "name_prefix": "",
            "owner_id": "228078008846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow All"
            },
            "tags_all": {
              "Name": "Allow All",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:subnet/subnet-04a597d21c2b3ca87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.224.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a597d21c2b3ca87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228078008846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_private_subnet_a"
            },
            "tags_all": {
              "Name": "main_private_subnet_a",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:subnet/subnet-0d11415907481a0de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.192.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d11415907481a0de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228078008846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_private_subnet_b"
            },
            "tags_all": {
              "Name": "main_private_subnet_b",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:subnet/subnet-019f3ffa51de0f5d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019f3ffa51de0f5d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228078008846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_private_subnet_c"
            },
            "tags_all": {
              "Name": "main_private_subnet_c",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:subnet/subnet-01c8c8d219aa76e04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c8c8d219aa76e04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228078008846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_public_subnet_a"
            },
            "tags_all": {
              "Name": "main_public_subnet_a",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:subnet/subnet-0ba338e63ad7bc2ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba338e63ad7bc2ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228078008846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_public_subnet_b"
            },
            "tags_all": {
              "Name": "main_public_subnet_b",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:subnet/subnet-08b7d84fd08a315b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b7d84fd08a315b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228078008846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_public_subnet_c"
            },
            "tags_all": {
              "Name": "main_public_subnet_c",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            },
            "vpc_id": "vpc-0264c11ebf1b9a6d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:228078008846:vpc/vpc-0264c11ebf1b9a6d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06d06deed133ae791",
            "default_route_table_id": "rtb-011879038bb3fa7c5",
            "default_security_group_id": "sg-02aeecffb28881423",
            "dhcp_options_id": "dopt-09b730d8d1ba89da3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0264c11ebf1b9a6d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011879038bb3fa7c5",
            "owner_id": "228078008846",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc",
              "deployment_environment_name": "local",
              "deployment_environment_purpose": "Rapid local experimentation for individual developer",
              "module_name": "network",
              "project_name": "fullstack-playground"
            }
          }
        }
      ]
    }
  ]
}